# beautiful_inno_bot

./: .dockerignore  .env.example  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile-prod  docker-compose.yml
.github/workflows/: build.yml  docker.yml  rust.yml
locales/: ru.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20240615_151855_create_users_table.rs  m20240615_151858_create_photos_table.rs  m20240615_153438_create_ban_table.rs  m20250401_221940_create_reactions_table.rs
src/: bot.rs  callback.rs  command.rs  exif.rs  image.rs  main.rs  message.rs
src/bot/: callback.rs  command.rs  markups.rs  message.rs  mod.rs  reactions.rs  traits.rs  types.rs
src/bot/dialogue/: ban_user.rs  decline_photo.rs  mod.rs
src/db/: types.rs
src/db/entity/: ban.rs  mod.rs  photos.rs  prelude.rs  reactions.rs  users.rs
src/redis/: mod.rs  subscriber.rs  types.rs
