[package]
name = "beautiful_inno_bot"
version = "1.4.0"
edition = "2024"

[profile.docker]
inherits = "dev"

[profile.release]
lto = "fat"
strip = "debuginfo"
opt-level = "z"
panic = "abort"
codegen-units = 1

[workspace]
members = [".", "migration"]

[dependencies]
Inflector = "0.11"
anyhow = "1.0"
dotenv = "0.15"
envconfig = "0.11"
image = "0.25"
kamadak-exif = "0.6"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["tracing"] }
mime = "0.3"
regex = "1.10"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "macros",
    "runtime-tokio-rustls",
    "with-uuid",
    "with-chrono",
] }
sentry = { version = "0.37", features = ["tracing", "anyhow"] }
teloxide = { git = "https://github.com/mediclab/teloxide.git", branch = "tracing", features = [
    "macros",
    "tracing-core",
    "redis-storage",
] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "1.11"
migration = { path = "migration" }
once_cell = "1.19"
serde = "1.0"
serde_json = "1.0"
now = "0.1"
chrono = "0.4"
backon = "1.2"
redis-work-queue = "0.3"
redis = { version = "0.26", features = ["aio", "tokio-comp"] }
rust-i18n = "3.1"

[replace]
"teloxide-core:0.11.2" = { git = 'https://github.com/mediclab/teloxide.git', branch = "tracing" }
