[package]
name = "migration"
version = "0.2.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
]
